--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                             advances in programming, learning a lot about C# and Microsoft technologies. From someone
                             whose attitude was mainly negative to programming I've became a programming maniac. My
                             current
-                            main purpose is to still make progression in Microsoft technologies, learning new frameworks
+                            main purpose is to still make progress in Microsoft technologies, learning new frameworks
                             and creating new more ambitious projects. Untill now I have created a couple of bigger and
                             smaller non-commercial projects.
                             <br /><br />
